Bug 413735 - git master fails to build with error: base operand of ‘->’ has non-pointer type ‘KProcessList::KProcessInfo’
Summary: git master fails to build with error: base operand of ‘->’ has non-pointer ty...
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL: https://launchpadlibrarian.net/449593...
Keywords:
Depends on:
Blocks:
 
Reported: 2019-11-02 10:59 UTC by Rik Mills
Modified: 2019-11-02 14:52 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rik Mills 2019-11-02 10:59:13 UTC
SUMMARY

FTBFS with error:

-Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2   -fPIC -std=gnu++14 -o CMakeFiles/latte-dock.dir/wm/tracker/lastactivewindow.cpp.o -c /<<BUILDDIR>>/latte-dock-0.9.85+git20191102.1006/app/wm/tracker/lastactivewindow.cpp
/<<BUILDDIR>>/latte-dock-0.9.85+git20191102.1006/app/wm/tasktools.cpp: In function ‘KService::List Latte::WindowSystem::servicesFromPid(quint32, KSharedConfig::Ptr)’:
/<<BUILDDIR>>/latte-dock-0.9.85+git20191102.1006/app/wm/tasktools.cpp:529:45: error: base operand of ‘->’ has non-pointer type ‘KProcessList::KProcessInfo’

Linux/KDE Plasma: Kubuntu 20.04, 19.10 and 19.04
KDE Plasma Version: Plasma 5.17.2, and 5.16.5
KDE Frameworks Version: 5.62
Qt Version: 5.12.5, 5.12.4, 5.12.2
Comment 1 Michail Vourlakos 2019-11-02 14:51:28 UTC
Git commit 36f7834cff9a616d1b5ff68951e7f71ebfbbaed4 by Michail Vourlakos.
Committed on 02/11/2019 at 14:50.
Pushed by mvourlakos into branch 'v0.9'.

fix typo that was creating an error build

M  +1    -1    app/wm/tasktools.cpp

https://commits.kde.org/latte-dock/36f7834cff9a616d1b5ff68951e7f71ebfbbaed4
Comment 2 Michail Vourlakos 2019-11-02 14:52:04 UTC
Git commit 7215d30ff6062bc03618533ebe4440318bcd4dbf by Michail Vourlakos.
Committed on 02/11/2019 at 14:51.
Pushed by mvourlakos into branch 'master'.

fix typo that was creating an error build

M  +1    -1    app/wm/tasktools.cpp

https://commits.kde.org/latte-dock/7215d30ff6062bc03618533ebe4440318bcd4dbf