fix typo that was creating an error build

BUG:413735